test-app/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: proxy
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
          name: http-web-svc

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
    - name: name-of-service-port
      protocol: TCP
      port: 80
      targetPort: http-web-svc
  type: LoadBalancer
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: foo
# spec:
#   rules:
#     - host: "*.lab"
#       http:
#         paths:
#           - path: /
#             pathType: Exact
#             backend:
#               service:
#                 name: nginx-service
#                 port:
#                   number: 80
